samples/_failures_safe/1761470637_a9511e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ea4411f.c: In function ‘main’:
./samples/SAFE/__tmp_5ea4411f.c:130:12: error: missing terminating " character
  130 |     printf("0:
      |            ^~~
./samples/SAFE/__tmp_5ea4411f.c:130:5: error: expected expression at end of input
  130 |     printf("0:
      |     ^~~~~~
./samples/SAFE/__tmp_5ea4411f.c:130:5: error: expected declaration or statement at end of input
